// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-1-menu"
        role="combobox"
      >
        <label
          for="downshift-0-input"
          id="downshift-1-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-1-menu"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-0-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-1-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-1-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-9-menu"
        role="combobox"
      >
        <label
          for="downshift-8-input"
          id="downshift-9-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-9-menu"
            aria-labelledby="downshift-9-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            disabled=""
            id="downshift-8-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-9-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-9-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      aria-invalid="true"
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value=""
    />
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
    >
      <span
        data-testid="Input-error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-5-menu"
        role="combobox"
      >
        <label
          for="downshift-4-input"
          id="downshift-5-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-5-menu"
            aria-labelledby="downshift-5-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default  pr-16 undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-4-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-5-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-5-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value="3"
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-213-menu"
        role="combobox"
      >
        <label
          for="downshift-212-input"
          id="downshift-213-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-213-menu"
            aria-labelledby="downshift-213-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-212-input"
            placeholder="Select option"
            value="3"
          />
        </div>
        <ul
          aria-labelledby="downshift-213-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-213-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-23-menu"
        role="combobox"
      >
        <label
          for="downshift-22-input"
          id="downshift-23-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-23-menu"
            aria-labelledby="downshift-23-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-22-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-23-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-23-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value="3"
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-13-menu"
        role="combobox"
      >
        <label
          for="downshift-12-input"
          id="downshift-13-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <span
            class="InputGroup__InputAddonStyle-sc-1obbdqe-0 epSJiV py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none cursor-default undefined undefined"
            data-testid="SelectDropdownInput__typeahead"
          >
            Option 3
          </span>
          <input
            aria-autocomplete="list"
            aria-controls="downshift-13-menu"
            aria-labelledby="downshift-13-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-12-input"
            placeholder="Select option"
            value="Option 3"
          />
        </div>
        <ul
          aria-labelledby="downshift-13-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-13-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-27-menu"
        role="combobox"
      >
        <label
          for="downshift-26-input"
          id="downshift-27-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-27-menu"
            aria-labelledby="downshift-27-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-26-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-27-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-27-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
      data-testid="select-list__input"
      readonly=""
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-19-menu"
        role="combobox"
      >
        <label
          for="downshift-18-input"
          id="downshift-19-label"
        />
        <div
          class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-19-menu"
            aria-labelledby="downshift-19-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined undefined"
            data-testid="SelectDropdownInput__input"
            id="downshift-18-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-19-label"
          class="styles__SelectOptionsList-b2falt-1 cGgIup"
          id="downshift-19-menu"
          role="listbox"
        />
      </div>
      <div
        class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-10 pointer-events-none text-theme-secondary-500"
      >
        <div
          class="sc-bdfBwQ gLRWTb transition-transform "
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
